add and style form results

--- a/index.html
+++ b/index.html
@@ -26,4 +26,12 @@
     <input id="simulationInput" type="text" name="simulationInput">
     <button type="submit">Show me</button>
   </form>
+
+  <div id="resultsNormal" class="hidden">
+    <h2>Wow, you are <span id="based">___</span>% based!</h2>
+  </div>
+
+  <div id="resultsBreakdown" class="hidden">
+    <h2>It's already too late for you</h2>
+  </div>
 </body>
